# cc-maya-instancer_main

./: .gitignore  README.md
icons/: bin2c.txt  clonerMulti.txt  icons_repo.h  out_clonerMulti.txt  out_clonerMultiLoc.txt
make/: CMakeLists.txt  build_linux.sh  build_osx.sh  build_win.ps1
make/modules/: FindMaya.cmake
make/src/: AETemplate.h  CMakeLists.txt  CloneAtoB.cpp  CloneAtoB.h  CloneCircle.cpp  CloneEdges.cpp  CloneEdges.h  CloneGrid.cpp  CloneIDs.cpp  CloneIDs.h  CloneMesh.cpp  CloneMesh.h  CloneSphere.cpp  CloneSphere.h  CloneSpline.cpp  CloneSpline.h  ClonerMulti.cpp  ClonerMulti.h  ClonerMultiCommand.cpp  ClonerMultiCommand.h  ClonerMultiLoc.cpp  ClonerMultiLoc.h  DagUtils.cpp  DagUtils.h  PluginMain.cpp  icons.h  icons_repo.h
mel/: AEclonerMultiTemplate.mel  clonerMulti_shelf.mel
scene/: inst_simple.ma  instance.ma  instance_v002.ma  instance_v003.ma  instancer_tutorial.ma  test.ma  wheel_tutorial_v001.ma
src/: AETemplate.h  CloneAtoB.cpp  CloneCircle.cpp  CloneCircle.h  CloneGrid.cpp  CloneGrid.h  CloneIDs.cpp  CloneMesh.cpp  CloneSphere.cpp  CloneSpline.cpp  ClonerMulti.cpp  ClonerMulti.h  ClonerMultiCommand.cpp  ClonerMultiCommand.h  ClonerMultiLoc.cpp  ClonerMultiLoc.h  ClonerMultiThreadCommand.cpp  ClonerMultiThreadCommand.h  DagUtils.cpp  DagUtils.h  PluginMain.cpp
store/osx_2016/: ClonerMulti.bundle
store/osx_2016.5/: ClonerMulti.bundle
store/osx_2017/: ClonerMulti.bundle
store/win_2014/: clonerMulti.mll
store/win_2016/: ClonerMulti.mll
store/win_2016.5/: ClonerMulti.mll
store/win_2017/: ClonerMulti.mll
